<resources>
    <string name="app_name">JAQB</string>
    <string name="title_activity_register">Register</string>
    <string name="prompt_email">School Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_register">Register</string>
    <string name="action_register_short">Create</string>
    <string name="welcome">"Welcome! "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">Sign in</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_check_in">"Check In for Class"</string>
    <string name="action_set_alarm">"Set Alarm"</string>
    <string name="action_see_rewards">"See Rewards"</string>
    <string name="action_attendance_history">"Attendance History"</string>
    <string name="header_upcoming_class">"Upcoming Class"</string>
    <string name="action_search_course">"Search Courses"</string>
    <string name="action_register_course">"Register"</string>
    <string name="action_my_courses">My Courses</string>
    <string name="logout">"Log Out"</string>
    <string name="register_course">"Register"</string>
    <string name="action_set_rewards">"Set Class Rewards"</string>
    <string name="action_get_qr">"Get QR Code"</string>
    <string name="class_list">"Class List"</string>
    <string name="action_submit_location">"Update Class Location"</string>
    <string name="badges">Badges</string>
    <string name="scan_qr">Scan QR Code or enter the attendance code</string>
    <string name="undo">Undo</string>
    <string name="customize">Customize</string>
    <string name="history_students">View attendance by\n student name</string>
    <string name="history_dates">View attendance by\n date</string>
</resources>
