<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/history_by_dates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@drawable/circular_button"
        android:text="@string/history_dates"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/history_dates" />

    <Button
        android:id="@+id/history_by_students"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/circular_button"
        android:text="@string/history_students"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/history_by_dates"
        app:layout_constraintVertical_bias="0.536"
        tools:text="@string/history_students" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="161dp"
        android:layout_height="35dp"
        android:text="@string/action_attendance_history"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/history_by_dates"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>