<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/get_qr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:background="@drawable/circular_button"
        android:onClick="GetQRButtonOnClick"
        android:text="@string/action_get_qr"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/instructor_toolbar"
        android:layout_width="0dp"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/colorAccent"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/class_list"
        app:titleTextColor="#FFFFFF" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="209dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:lineSpacingExtra="18sp"
        android:text="SER 586\n02/05/2020\t\t\t3:30PM"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructor_toolbar" />

    <Button
        android:id="@+id/button5"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/colorAccent"
        android:onClick="myCoursesButtonOnClick"
        android:text="@string/action_my_courses"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button6"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:background="@color/colorAccent"
        android:onClick="attendaceHistoryButtonOnClick"
        android:text="@string/action_attendance_history"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/get_qr" />

</androidx.constraintlayout.widget.ConstraintLayout>
